--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ class MarkdownStyle extends HTMLElement {
 customElements.define('markdown-style', MarkdownStyle);</script><markdown-style style="max-width: 960px; margin: 0 auto 60px auto; padding: 8px" class="markdown-style">
     <h1 id="privacy-policy"><a class="anchor" aria-hidden="true" tabindex="-1" href="#privacy-policy"><span class="octicon octicon-link"></span></a>Privacy Policy</h1>
     <p>
-      Leonid Semenov built the .assistant app as an Open Source app. This SERVICE is provided by Leonid Semenov at no cost and is intended for use as is.
+      Leonid Semenov built the RedExpress app as an Open Source app. This SERVICE is provided by Leonid Semenov at no cost and is intended for use as is.
       This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
       If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
-      The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at .assistant unless otherwise defined in this Privacy Policy.
+      The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at RedExpress unless otherwise defined in this Privacy Policy.
     </p>
     <h2 id="information-collection-and-use"><a class="anchor" aria-hidden="true" tabindex="-1" href="#information-collection-and-use"><span class="octicon octicon-link"></span></a>Information Collection and Use</h2>
     <p>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.</p>
